feat(Security): Allow YouTube video embeds in CSP

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         img-src 'self' https: data:;
         font-src 'self' https://cdnjs.cloudflare.com;
         connect-src 'self' https: wss:;
+        frame-src 'self' https://www.youtube.com;
     ">
     <title>BlurtBB Forum</title>
     <!-- Bootstrap 5 CSS -->
