feat(Settings): Refactor RPC node selection to a configurable dropdown

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 <div class="modal-body">
                     <form id="config-form">
                         <div class="mb-3">
-                            <label for="rpc-node" class="form-label">Blurt RPC Node</label>
-                            <input type="text" class="form-control" id="rpc-node">
+                            <label for="rpc-node-select" class="form-label">Blurt RPC Node</label>
+                            <select class="form-select" id="rpc-node-select"></select>
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="use-coal">
